--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -17,15 +17,17 @@
     <div th:replace="~{fragments/sidebar :: sidebar}"></div>
 
 
-
-
 <!--    main content-->
     <div class="container main-content main-content-toggle">
-        <div class="text-white  overflow-hidden">
+        <div class="text-white">
 
         Main Content
         </div>
     </div>
+
+    <script>
+
+    </script>
 
 
 
