--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,11 +1,11 @@
 <head th:fragment="head">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>OnedayToday</title>
-    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
-<!--    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>-->
 <!--    popper-->
-<!--    <script type="text/javascript" th:src="@{/js/cjs/popper.js}"></script>-->
-<!--    <script type="text/javascript" th:src="@{/js/cjs/popper-base.js}"></script>-->
+    <script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<!--    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>-->
+<!--    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.js}"></script>-->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/index.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/index.js}"></script>
