--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -56,39 +56,34 @@
         <ul class="sidebar">
             <li class="sidebar-item" >
                 <div class="nav-link text-white col ps-0" aria-current="page">
-<!--                    <span class="col-2">-->
-<!--                        <img alt="" src="/img/forklane.png" width="20px" height="20px">-->
-<!--                    </span>-->
                     <div class="btn-group col-2">
                         <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span class="item-numbering">Q1</span>
+                            <span class="item-numbering">설문조사 정보 입력</span>
                             <span class="ms-2">tt</span>
                             <i></i>
                         </div>
                         <ul class="dropdown-menu">
                             <li>
-                                <div class="dropdown-item" href="#">객관식</div>
-                            </li>
-                            <li>
-                                <div class="dropdown-item" href="#">2</div>
-                            </li>
-                            <li>
-                                <div class="dropdown-item" href="#">3</div>
-                            </li>
-                            <li>
-                                <div class="dropdown-item" href="#">3</div>
-                            </li>
-                            <li>
-                                <div class="dropdown-item" href="#">3</div>
-                            </li>
-                            <li>
-                                <div class="dropdown-item" href="#">3</div>
+                                <div class="ms-3">기능</div>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
+<!--                         0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택        -->
                             <li>
-                                <div class="dropdown-item" href="#">4</div>
+                                <div class="dropdown-item">객관식</div>
+                            </li>
+                            <li>
+                                <div class="dropdown-item">OX</div>
+                            </li>
+                            <li>
+                                <div class="dropdown-item">LIKERT</div>
+                            </li>
+                            <li>
+                                <div class="dropdown-item">별점</div>
+                            </li>
+                            <li>
+                                <div class="dropdown-item">다중선택 객관식</div>
                             </li>
                         </ul>
                     </div>
@@ -170,7 +165,7 @@
         function getQuestionNumbering(e) {
             let questionNumbering = document.querySelectorAll('.item-numbering');
             questionNumbering.forEach(function (item, index) {
-                item.innerHTML = "Q" + (index + 1);
+                if(index !== 0) item.innerHTML = "Q" + (index );
             });
         }
 
