fix sidebar.html align

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -11,55 +11,52 @@
         <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
     </button>
     <div class="sidebar-container position-absolute top-0 overflow-hidden d-flex flex-column vh-100 flex-shrink-0 py-3 text-white ">
+        <!--        sidebar header-->
         <div class="align-items-center m-0 mt-3 text-white text-decoration-none row">
             <!--    토글 버튼-->
             <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar">
                 <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
             </button>
             <h5 class=" ms-5 col">Create</h5>
-            <!-- popper button -->
-            <div class="btn-group col">
-                <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <ul class="dropdown-menu">
-                    <li>
-                        <div class="dropdown-item" href="#">객관식</div>
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">2</div>
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">3</div>
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">3</div>
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">3</div>
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">3</div>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li>
-                        <div class="dropdown-item" href="#">4</div>
-                    </li>
-                </ul>
-            </div>
 
         </div>
         <hr>
-
+        <!--        sidebar body-->
         <ul class="sidebar">
-            <li class="sidebar-item" >
-                <div class="nav-link text-white col ps-0" aria-current="page">
-                    <div class="btn-group col-2">
+            <li class="sidebar-item">
+<!--                data part-->
+                <div data-input="data" class="data-type-input">
+                    <!--                    RS INTRO 전용-->
+                    <input type="hidden" name="rs_title" value="test">
+                    <input type="hidden" name="rs_desc" value="">
+                    <input type="hidden" name="rs_start_date" value="">
+                    <input type="hidden" name="rs_end_date" value="">
+
+                    <!--                    여기에 필요 한 모든 입력값 저장 한다-->
+                    <!--                    0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택 -->
+                    <input type="hidden" name="rsi_question" value="test">
+                    <input type="hidden" name="rsi_type" value="5">
+                    <input type="hidden" name="rsi_type0_1" value="">
+                    <input type="hidden" name="rsi_type0_2" value="">
+                    <input type="hidden" name="rsi_type0_3" value="">
+                    <input type="hidden" name="rsi_type0_4" value="">
+                    <input type="hidden" name="rsi_type0_5" value="">
+                    <input type="hidden" name="rsi_type0_etc" value="">
+                    <input type="hidden" name="rsi_type1" value="">
+                    <input type="hidden" name="rsi_type2" value="">
+                    <input type="hidden" name="rsi_type3" value="">
+                    <input type="hidden" name="rsi_type4" value="">
+                    <input type="hidden" name="rsi_type5" value="">
+
+                </div>
+
+
+                <div class="nav-link text-white col ps-0 d-flex justify-content-between align-items-center" aria-current="page">
+                    <span class="item-numbering ">정보 입력</span>
+                    <span class="item-title ms-2">제목제목제목</span>
+                    <div class="btn-group  ">
+                        <!-- popper button -->
                         <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span class="item-numbering">설문조사 정보 입력</span>
-                            <span class="ms-2">tt</span>
                             <i></i>
                         </div>
                         <ul class="dropdown-menu">
@@ -69,90 +66,152 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-<!--                         0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택        -->
+                            <!--                         0: 객관식 1: OX 2: likert 3: 주관식 4: 별점 5: 다중선택        -->
                             <li>
-                                <div class="dropdown-item">객관식</div>
+                                <div class="dropdown-item" data-type="0" onclick="actionByType(this)">객관식</div>
                             </li>
                             <li>
-                                <div class="dropdown-item">OX</div>
+                                <div class="dropdown-item" data-type="1" onclick="actionByType(this)">OX</div>
                             </li>
                             <li>
-                                <div class="dropdown-item">LIKERT</div>
+                                <div class="dropdown-item" data-type="2" onclick="actionByType(this)">LIKERT</div>
                             </li>
                             <li>
-                                <div class="dropdown-item">별점</div>
+                                <div class="dropdown-item" data-type="3" onclick="actionByType(this)">주관식</div>
                             </li>
                             <li>
-                                <div class="dropdown-item">다중선택 객관식</div>
+                                <div class="dropdown-item" data-type="4" onclick="actionByType(this)">별점</div>
                             </li>
+                            <li>
+                                <div class="dropdown-item" data-type="5" onclick="actionByType(this)">다중선택 객관식</div>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li>
+                                <div class="dropdown-item" data-type="delete" onclick="actionByType(this)">삭제</div>
+                            </li>
+
                         </ul>
                     </div>
-
                 </div>
             </li>
 
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q2</span></li>
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q3</span></li>
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q4</span></li>
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q5</span></li>
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q6</span></li>
-            <li class="sidebar-item" draggable="true" ><span class="item-numbering">Q7</span></li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q1</span>aaaa</li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q2</span>zz</li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q3</span>qqq</li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q4</span>ww</li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q5</span>ee</li>
+            <li class="sidebar-item" draggable="true"><span class="item-numbering me-2">Q6</span>rr</li>
 
         </ul>
 
+        <!--        sidebar footer-->
+        <!--        nothing now-->
+
 
     </div>
-
     <script>
-        // Drag and Drop
+        function actionByType(element) {
+            // 클릭한 요소에서 가장 가까운 data-list 속성을 가진 부모 요소를 찾습니다.
+            const parentWithDataList = element.closest('.sidebar-item');
+
+            if (parentWithDataList) {
+                // 부모 요소를 찾았을 경우
+                const dataList = parentWithDataList.querySelector('[data-input="data"]');
+                const dataListInput = dataList.querySelectorAll('input');
+                // const dataListInputType = dataList.querySelector('[name="rsi_type"]');
+
+
+                // 부모요소 삭제
+                // if(element.getAttribute('data-type') === "delete"){
+                //     parentWithDataList.remove();
+                //     return;
+                // }
+                // console.log(dataListInputType)
+            } else {
+                console.log('부모 요소의 data-list 찾을 수 없습니다. 상황이 심각 합니다');
+            }
+        }
+    </script>
+
+    <!--Make SideBar Element-->
+    <script>
+        function sideBarElementMaker(questionNumber, questionType, questionTitle) {
+            let sidebarItem = document.createElement("li");
+            sidebarItem.classList.add("sidebar-item");
+            sidebarItem.setAttribute("draggable", "true");
+            sidebarItem.innerHTML = "<span class=\"item-numbering me-2\">" + questionNumber + "</span>" + questionTitle;
+            sidebarItem.addEventListener('dragstart', handleDragStart);
+            sidebarItem.addEventListener('dragover', handleDragOver);
+            sidebarItem.addEventListener('dragenter', handleDragEnter);
+            sidebarItem.addEventListener('dragleave', handleDragLeave);
+            sidebarItem.addEventListener('dragend', handleDragEnd);
+            sidebarItem.addEventListener('drop', handleDrop);
+            return sidebarItem;
+        }
+    </script>
+
+    <!--Drag and Drop-->
+    <script>
+        let dragSrcEl = null;
+
+        function handleDragStart(e) {
+            this.style.opacity = '0.4';
+            dragSrcEl = this;
+            e.dataTransfer.effectAllowed = 'move';
+            e.dataTransfer.setData('text/html', this.innerHTML);
+        }
+
+        function handleDragEnd(e) {
+            this.style.opacity = '1';
+            let items = document.querySelectorAll('.sidebar-item');
+            items.forEach(function (item) {
+                item.classList.remove('over');
+            });
+            setQNumWhenDrag()
+        }
+
+        function handleDragOver(e) {
+            if (e.preventDefault) {
+                e.preventDefault();
+            }
+            return false;
+        }
+
+        function handleDragEnter(e) {
+            this.classList.add('over');
+        }
+
+        function handleDragLeave(e) {
+            this.classList.remove('over');
+        }
+
+        function handleDrop(e) {
+            e.stopPropagation();
+            if (e.target.querySelector('.item-numbering').innerHTML === "설문조사 정보 입력") {
+                alert("첫번째 항목은 이동할 수 없습니다.")
+                return;
+            }
+
+            if (dragSrcEl !== this) {
+                dragSrcEl.innerHTML = this.innerHTML;
+                this.innerHTML = e.dataTransfer.getData('text/html');
+            }
+            return false;
+        }
+
+        function setQNumWhenDrag(e) {
+            let questionNumbering = document.querySelectorAll('.item-numbering');
+            questionNumbering.forEach(function (item, index) {
+                if (index !== 0) item.innerHTML = "Q" + (index);
+            });
+        }
+
         document.addEventListener('DOMContentLoaded', (event) => {
-            let dragSrcEl = null;
-            function handleDragStart(e) {
-                this.style.opacity = '0.4';
-                dragSrcEl = this;
-                e.dataTransfer.effectAllowed = 'move';
-                e.dataTransfer.setData('text/html', this.innerHTML);
-            }
-
-            function handleDragEnd(e) {
-                this.style.opacity = '1';
-
-                items.forEach(function (item) {
-                    item.classList.remove('over');
-                });
-                getQuestionNumbering()
-
-            }
-            function handleDragOver(e) {
-                if (e.preventDefault) {
-                    e.preventDefault();
-                }
-                return false;
-            }
-
-            function handleDragEnter(e) {
-                this.classList.add('over');
-            }
-
-            function handleDragLeave(e) {
-                this.classList.remove('over');
-            }
-            function handleDrop(e) {
-                e.stopPropagation();
-                if(e.target.querySelector('.item-numbering').innerHTML === "Q1"){
-                    alert("첫번째 항목은 이동할 수 없습니다.")
-                    return;
-                }
-
-                if (dragSrcEl !== this) {
-                    dragSrcEl.innerHTML = this.innerHTML;
-                    this.innerHTML = e.dataTransfer.getData('text/html');
-                }
-                return false;
-            }
 
             let items = document.querySelectorAll('.sidebar-item');
-            items.forEach(function(item) {
+            items.forEach(function (item) {
                 item.addEventListener('dragstart', handleDragStart);
                 item.addEventListener('dragover', handleDragOver);
                 item.addEventListener('dragenter', handleDragEnter);
@@ -161,18 +220,10 @@
                 item.addEventListener('drop', handleDrop);
             });
         });
-
-        function getQuestionNumbering(e) {
-            let questionNumbering = document.querySelectorAll('.item-numbering');
-            questionNumbering.forEach(function (item, index) {
-                if(index !== 0) item.innerHTML = "Q" + (index );
-            });
-        }
-
     </script>
 
+    <!--Toggle the sidebar-->
     <script>
-        // Toggle the side navigation
         const sidebarToggle = document.body.querySelectorAll('.sidebar-toggle');
         sidebarToggle.forEach((toggle) => {
             toggle.addEventListener('click', () => {
