--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -6,7 +6,7 @@ body{
     /*background-attachment: fixed;*/
     /*background-position: top;*/
     /*background-color: rgb(7, 3, 2);*/
-    background: #dde0e3;
+    background-color: rgba(221, 224, 227, 0.6);
 }
 
 .bottom-10{
@@ -174,6 +174,7 @@ body{
     color: #a5aec0
 }
 
+/* Side bar */
 .sidebar-container{
     background: #1e2125;
     opacity: 0.8;
@@ -183,7 +184,10 @@ body{
     width: 21em;
     transition: all ease 0.4s;
 }
-/* Side bar */
+.sidebar-container.hide{
+    left: -21em;
+}
+
 .sidebar{
     list-style: none;
     /*left: 0;*/
@@ -226,24 +230,21 @@ body{
 }
 
 
-.sidebar-container.hide{
-    left: -21em;
 
-}
 
 .sidebar-toggle{
-    position: absolute;
-    top: 2em;
-    left: 0;
-    width: 2em;
-    height: 2em;
+    /*position: absolute;*/
+    /*top: 2em;*/
+    /*left: 0;*/
+    /*width: 2em;*/
+    /*height: 2em;*/
     background: #0a53be;
     color: #fff;
     border-radius: 50px;
-    text-align: center;
-    line-height: 46px;
-    transition: all ease 0.3s;
-    z-index: 99;
+    /*text-align: center;*/
+    /*line-height: 46px;*/
+    /*transition: all ease 0.3s;*/
+    /*z-index: 99;*/
     opacity: 0.8;
 }
 
@@ -265,18 +266,39 @@ body{
 
 
 /*create page*/
+
+.main-content-container{
+    transition: all ease 0.4s;
+    width: 100%;
+}
+
 .main-content-toggle{
-    top: 2em;
+    /*top: 2em;*/
     padding-left: 22em;
-    margin-left: 0;
+    padding-right: 1em;
     transition: all ease 0.4s;
 }
 
 .main-content-toggle.hide{
     top: 2em;
-    padding-left: 2em;
+    padding-left: 1em;
     margin-left: 0;
 }
+
+.main-content {
+    padding: 10px;
+    transition: all ease 0.4s;
+    background-color: rgba(13, 202, 240, 0.4);
+    min-height: 80vh;
+    color: #0a58ca;
+    /* 그림자 효과 추가 - 오른쪽 과 아래쪽 만 */
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); /* 오른쪽 및 아래쪽 그림자 효과만 적용 */
+    /* 모서리 둥글게 만들기 */
+    border-radius: 10px; /* 원하는 모서리 둥글기 정도를 조절 가능 */
+    border: none; /* 테두리 제거 */
+}
+
+
 
 /* create page popup menu button*/
 
